<resources>
    <string name="app_name">Ghroem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_home">Home</string>
    <string name="item_library">Library</string>
    <string name="item_setting">Settings</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="good_night">Good night</string>
<!--    <string name="action_music">action_music</string>-->
<!--    <string name="send_action_to_activity">send_action_to_activity</string>-->
<!--    <string name="object_song">object_song</string>-->
<!--    <string name="playlist_object">playlist_object</string>-->
<!--    <string name="action_music_service">action_music_service</string>-->
    <string name="favorite">Favorite</string>
    <string name="song_exists">This song has exists!</string>
    <string name="added_song_to_favorite_playlist">Added to favorite playlist</string>
    <string name="remove_song_to_favorite_playlist">Removed from favorite playlist</string>
    <string name="delete_song">Delete this song</string>
    <string name="sure_to_delete">Are you sure to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="song">song</string>
    <string name="songs">songs</string>
    <string name="give_your_playlist_a_name">Give your playlist a name!</string>
    <string name="please_give_your_playlist_a_name">Please give your playlist a name!</string>
    <string name="playlist_exist">This playlist has exist!</string>
    <string name="cant_rename_favorite_playlist">Can\'t rename Favorite Playlist</string>
    <string name="cant_delete_favorite_playlist">Can\'t delete Favorite Playlist</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>
    <string name="love">Love</string>
    <string name="unlove">Unlove</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="recently_added">Recently Added</string>
    <string name="search">Finds in Songs</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="delete_from_playlist">Delete from playlist</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="type_your_playlist_name">Type your playlist\'s name</string>
    <string name="your_list_song">Your list song</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="sure_to_delete_playlist">Are you sure to delete this playlist?</string>
    <string name="add_song">Add songs</string>
    <string name="sort">Sort</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose language:</string>
    <string name="removed">Removed</string>
    <string name="undo">UNDO</string>
    <string name="theme">Theme</string>
    <string name="choose_theme">Choose theme:</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

</resources>