<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/bg_white_corner"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_blue_corner_top_left_top_right"
        android:fontFamily="@font/product_sans"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/create_new_playlist"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/give_your_playlist_a_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_name_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_gray_corner"
            android:fontFamily="@font/product_sans"
            android:hint="@string/type_your_playlist_name"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:alpha="0.4"
                android:background="@drawable/bg_gray_corner"
                android:fontFamily="@font/product_sans"
                android:text="@string/cancel" />


            <Button
                android:id="@+id/button_create"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_blue_corner"
                android:fontFamily="@font/product_sans"
                android:text="@string/create" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>